--- a/src/App.scss
+++ b/src/App.scss
@@ -56,16 +56,16 @@ $name-transition: opacity .9s ease-out;
     align-items: $col-align;
 }
 
-@mixin nav-in-base() {
+@mixin nav-faicon-in-base() {
     transform-origin: left bottom;
-    animation: nav-in .2s ease-out 0s 1 both;
+    animation: nav-faicon-in .2s ease-out 0s 1 forwards;
 }
 
-@keyframes nav-out {
+@keyframes nav-faicon-out {
     from { transform: translate(0, 0) scale(1); }
     to { transform: translate(.5rem, .3rem) scale(1.4); }
 }
-@keyframes nav-in {
+@keyframes nav-faicon-in {
     from { transform: translate(.5rem, .3rem) scale(1.4); }
     to { transform: translate(0, 0) scale(1); }
 }
@@ -134,6 +134,7 @@ h2 {
 .sidebar {
     @include flex-line(column);
     height: 100%;
+    min-width: 14.9rem;
     z-index: 1000;
     border-right: solid 1px #8e6666;
     background-image: linear-gradient(to bottom, #e69129b3, #5a070785);
@@ -168,7 +169,7 @@ h2 {
             opacity: .7;
 
             & svg {
-                @include nav-in-base();
+                @include nav-faicon-in-base();
             }
 
             &::after {
@@ -196,7 +197,7 @@ h2 {
             opacity: 1;
 
             & svg {
-                animation: nav-out .2s ease-out 0s 1 forwards;
+                animation: nav-faicon-out .2s ease-out 0s 1 forwards;
             }
 
             &::after {
@@ -209,7 +210,7 @@ h2 {
 .navlist {
     @include flex-line(column);
 
-    padding: 11rem $pageleft-pad 8rem $pageleft-pad;
+    padding: 11rem $pageleft-pad 8rem ($pageleft-pad - .2vw);
     width: 100%;
 
     li {
@@ -227,14 +228,41 @@ h2 {
                 color: #fff;
                 text-shadow: 0px 2px 2px #000;
 
-                transition: color .1s ease-in, text-shadow .2s ease-in;
+                & div {
+                    position: relative;
+                    transition: color .1s ease-in, text-shadow .2s ease-in;
+
+                    &::after {
+                        content: "✧";
+                        position: absolute;
+                        top: .1rem;
+                        right: -1.7rem;
+                        width: min-content;
+                        height: 100%;
+                        color: $color-shade-l;
+                        opacity: 0;
+
+                        transition: opacity .5s ease-out;
+                    }
+                }
             }
             &:hover, &:active {
                 color: $color-accent-l;
+
+                & div::after {
+                    opacity: 1;
+                }
             }
             &.active {
                 color: $color-primary;
                 text-shadow: 0px 1px 1px #000;
+                cursor: default;
+
+                & div::after {
+                    content: "✦";
+                    color: $color-primary;
+                    opacity: 1;
+                }
             }
         }
     }
