--- a/src/App.scss
+++ b/src/App.scss
@@ -39,7 +39,7 @@ $default-pad: 3px;
 $pageleft-pad: 1.5vw;
 
 $name-transition: opacity .9s ease-out;
-$pageside-pad: 13rem;
+$pageside-pad: 14rem;
 
 
 @mixin flex-line($direction, $col-justify: flex-start, $col-align: flex-start) {
@@ -116,7 +116,7 @@ h2 {
     }
 }
 
-h3 {
+h4 {
     font-family: 'Raleway', sans-serif;
     font-size: 2rem;
     font-weight: 600;
@@ -294,7 +294,7 @@ h3 {
 
     position: relative;
     min-height: 100vh;
-    padding: 11rem $pageside-pad 6rem $pageside-pad;
+    padding: 15.6rem 11rem 6rem $pageside-pad;
 
     &.page--skills {
         background-image: linear-gradient(180deg, rgba(7,129,148,.13), rgba(3,41,49,.41));
@@ -303,21 +303,44 @@ h3 {
 
 .section {
     @include flex-line(row);
+    flex-wrap: wrap;
 
     position: relative;
     border: solid 15px #222d4a94;
     border-radius: 4rem;
-    padding: 1.8rem 3rem 2.7rem 4rem;
+    padding: 2.8rem 3rem .6rem 7rem;
     margin-bottom: 4rem;
-
-    & li:first-child {
-        position: absolute;
-        top: -13px;
-        left: -4px;
-    }
 
     & li {
         position: relative;
+        width: 12rem;
+        margin-bottom: 3rem;
+        @include flex-center(center, center);
+
+        & .icon-skill {
+            height: 5.4rem;
+            max-width: 5.4rem;
+            filter: drop-shadow(2px 2px 3px #000);
+
+            &.react {
+                object-fit: cover;
+            }
+            &.github {
+                background-color: #fcfcfc;
+                border-radius: 50%;
+            }
+            &.drawio {
+                border-radius: 1rem;
+            }
+        }
+
+        &:first-child { // styles section headers
+            position: absolute;
+            top: -13px;
+            left: -4px;
+            white-space: nowrap;
+            align-items: flex-start;
+        }
 
         &::after {
             content: attr(data-skill);
@@ -328,16 +351,8 @@ h3 {
             white-space: nowrap;
             transform: translateX(-50%);
 
-            // font-family: 'Indie Flower', cursive;
             font-size: 1.2rem;
         }
-    }
-
-    & .icon-skill {
-        height: 5.4rem;
-        width: auto;
-        margin: 0 3.1rem;
-        filter: drop-shadow(2px 2px 3px #000);
     }
 
     &:last-child {
