--- a/src/App.scss
+++ b/src/App.scss
@@ -182,7 +182,7 @@ h4 {
             color: #fff;
             opacity: .7;
 
-            & svg {
+            svg {
                 @include nav-faicon-in-base();
             }
 
@@ -242,7 +242,7 @@ h4 {
                 color: #fff;
                 text-shadow: 0px 2px 2px #000;
 
-                & div {
+                div {
                     position: relative;
                     transition: color .1s ease-in, text-shadow .2s ease-in;
 
@@ -263,7 +263,7 @@ h4 {
             &:hover, &:active {
                 color: $color-accent-l;
 
-                & div::after {
+                div::after {
                     opacity: 1;
                 }
             }
@@ -272,7 +272,7 @@ h4 {
                 text-shadow: 0px 1px 1px #000;
                 cursor: default;
 
-                & div::after {
+                div::after {
                     content: "✦";
                     color: $color-primary;
                     opacity: 1;
@@ -310,14 +310,15 @@ h4 {
     border-radius: 4rem;
     padding: 2.8rem 3rem .6rem 7rem;
     margin-bottom: 4rem;
+    // background-image: linear-gradient(180deg, #0d175af5, #275c8ae3);
 
-    & li {
+    li {
         position: relative;
         width: 12rem;
         margin-bottom: 3rem;
         @include flex-center(center, center);
 
-        & .icon-skill {
+        .icon-skill {
             height: 5.4rem;
             max-width: 5.4rem;
             filter: drop-shadow(2px 2px 3px #000);
