--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,15 @@ html, body, .root, .App, #grid-base {
     width: 100%;
 }
 
+.textcopy {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.7rem;
+    color: #fcfcfc;
+    line-height: 2.2rem;
+    white-space: pre-line;
+    margin-bottom: 16px;
+}
+
 
 // VARIABLES
 $color-shade-l: #fcfcfc;  // alabaster
@@ -113,26 +122,40 @@ h2 {
         white-space: nowrap;
 
         transition: $name-transition;
+
+        &.colored {
+            color: $color-primary;
+        }
     }
 }
 
-h4 {
+h3 {
+    &.home__name {
+        margin-bottom: 11px;
+
+        font-family: 'Indie Flower', sans-serif;
+        font-size: 7.7rem;
+        color: #fcfcfc;
+        text-shadow: 2px 2px 15px #000;
+    }
+}
+
+h5 {
+    margin-right: 19px;
+
     font-family: 'Raleway', sans-serif;
     font-size: 2rem;
     font-weight: 600;
     text-transform: lowercase;
     color: #fcfcfc;
     text-shadow: 11px 4px 2px #000;
-
-    &.header-section {
-        color: $color-primary;
-    }
 }
 
 
 // BASE & SIDEBAR
 .App {
     background-image: url(./assets/images/bgs/contemp-comp-jedit.jpg);
+    background-image: linear-gradient(180deg, #361b1b9e 28%, #1d100ac2 100%), url(/static/media/contemp-comp-jedit.ec3a22fa.jpg);
     background-size: cover;
     background-color: #fff;
     background-position: left center;
@@ -147,16 +170,24 @@ h4 {
 
 .sidebar {
     @include flex-line(column);
+    position: relative;
     height: 100%;
     min-width: 14.9rem;
     z-index: 1000;
-    border-right: solid 1px #8e6666;
-    background-image: linear-gradient(to bottom, #e69129b3, #5a070785);
-    /* background-image: linear-gradient(to bottom, #4bc5ffb0, #011d46); */
-    /* background-image: linear-gradient(to bottom, #b99556b0, #271a0287); */
-    /* background-image: linear-gradient(to bottom, #4bc5ffb0, #011d46); */
-    /* background-image: linear-gradient(to bottom, #A38383b0, #5C3828); */
-    /* background-image: linear-gradient(to bottom, #4bc5ffb0, #0d2c5a); */
+    transition: transform .6s ease-out;
+
+    .sidebar__bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        // border-right: solid 1px #8e6666;
+        background-image: linear-gradient(to bottom, #e69129b3, #5a070785);
+        /* background-image: linear-gradient(to bottom, #4bc5ffb0, #011d46); */
+        /* background-image: linear-gradient(to bottom, #b99556b0, #271a0287); */
+        /* background-image: linear-gradient(to bottom, #4bc5ffb0, #011d46); */
+        /* background-image: linear-gradient(to bottom, #A38383b0, #5C3828); */
+        /* background-image: linear-gradient(to bottom, #4bc5ffb0, #0d2c5a); */
+    }
 }
 
 .namebox {
@@ -286,7 +317,7 @@ h4 {
 // STAGES
 .stage { // static viewport containter
     overflow-y: auto;
-    background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.89) 28%, #1d100adb 100%);
+    // background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.89) 28%, #1d100adb 100%);
 }
 
 .page { // scrolling canvas
@@ -299,6 +330,31 @@ h4 {
     &.page--skills {
         background-image: linear-gradient(180deg, rgba(7,129,148,.13), rgba(3,41,49,.41));
     }
+}
+
+.page--home {
+    .home__topline, .home__mynameis {
+        @include flex-line(row);
+    }
+
+    .home__mynameis span {
+        font-family: 'Raleway', sans-serif;
+        font-size: 3.4rem;
+        font-weight: 600;
+        text-transform: lowercase;
+        color: $color-accent-l;
+        text-shadow: 14px 4px 8px #000;
+        position: relative;
+        top: -9px;
+        margin-left: 6px;
+    }
+
+    .textcopy strong {
+        font-weight: 900;
+        text-shadow: 2px 3px 1px #000;
+        color: $color-primary;
+    }
+
 }
 
 .section {
