--- a/src/App.scss
+++ b/src/App.scss
@@ -140,6 +140,19 @@ h3 {
     }
 }
 
+h4 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: lowercase;
+    color: #fcfcfc;
+    text-shadow: 11px 4px 2px #000;
+
+    &.header-section {
+        color: $color-primary;
+    }
+}
+
 h5 {
     margin-right: 19px;
 
@@ -159,6 +172,14 @@ h5 {
     background-size: cover;
     background-color: #fff;
     background-position: left center;
+}
+
+.app__fadebg {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(180deg, #080808a6, #0f1213aa);
+    transition: opacity .8s ease-out 1s;
 }
 
 #grid-base {
@@ -316,6 +337,7 @@ h5 {
 
 // STAGES
 .stage { // static viewport containter
+    position: relative;
     overflow-y: auto;
     // background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.89) 28%, #1d100adb 100%);
 }
@@ -327,9 +349,9 @@ h5 {
     min-height: 100vh;
     padding: 15.6rem 11rem 6rem $pageside-pad;
 
-    &.page--skills {
-        background-image: linear-gradient(180deg, rgba(7,129,148,.13), rgba(3,41,49,.41));
-    }
+    // &.page--skills {
+    //     background-image: linear-gradient(180deg, rgba(7,129,148,.13), rgba(3,41,49,.41));
+    // }
 }
 
 .page--home {
@@ -355,6 +377,11 @@ h5 {
         color: $color-primary;
     }
 
+    .valediction {
+        // font-family: 'Indie Flower', sans-serif;
+        font-size: 2.2rem;
+
+    }
 }
 
 .section {
