--- a/src/oldApp.css
+++ b/src/oldApp.css
@@ -171,12 +171,12 @@ a.faicon:hover, a.faicon:active {
   text-shadow: 0px 1px 1px #000;
 } */
 
-.stage {
+/* .stage {
   overflow-y: auto;
   background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.89) 56%, #1d100adb 100%);
   /* background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.58) 56%, #1d100ad1 100%); */
-  /* background-image: linear-gradient(180deg, rgba(255,255,255,0.500437675070028) 56%, rgba(146,163,171,0.5032387955182073) 100%); */
-}
+  /* background-image: linear-gradient(180deg, rgba(255,255,255,0.500437675070028) 56%, rgba(146,163,171,0.5032387955182073) 100%);
+} */
 
 /* PROJECTS STAGE */
 .stage--projects {
@@ -208,11 +208,11 @@ a.faicon:hover, a.faicon:active {
 }
 /* END */
 
-.page {
+/* .page {
   position: relative;
   min-height: 100vh;
   padding: 113px 43px 43px 3px;
-}
+} */
 
 .page__textbock {
   padding: 3px 42px 3px 74px;
@@ -593,14 +593,14 @@ h2.namebox__subname {
 
 
 /* ICONSBAR */
-.network-icons {
+/* .network-icons {
   margin-left: 2vw;
 }
 
 .network-icons img {
   height: 24px;
   margin-bottom: 6px;
-}
+} */
 
 
 
