--- a/src/App.scss
+++ b/src/App.scss
@@ -130,25 +130,20 @@ h2 {
 }
 
 h3 {
-    &.home__name {
-        margin-bottom: 11px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 3.4rem;
+    font-weight: 600;
+    text-transform: lowercase;
+    color: $color-accent-l;
+    text-shadow: 14px 4px 8px #000;
 
-        font-family: 'Indie Flower', sans-serif;
-        font-size: 7.7rem;
-        color: #fcfcfc;
-        text-shadow: 2px 2px 15px #000;
-    }
     &.page__header {
+        margin-bottom: 5rem;
+
         font-size: 3rem;
-        margin-bottom: 3rem;
-        font-weight: bold;
-        color: $color-accent-l;
-        text-transform: lowercase;
-        letter-spacing: 1px;
-        text-shadow: 3px 2px 3px #000;
-        position: fixed;
-        bottom: 21.3rem;
-        right: 13.6rem;
+        // position: fixed;
+        // top: 52.6rem;
+        // left: 101rem;
     }
 }
 
@@ -205,7 +200,8 @@ h5 {
     @include flex-line(column);
     position: relative;
     height: 100%;
-    min-width: 14.9rem;
+    min-width: 16.5rem;
+    // min-width: 14.9rem;
     z-index: 1000;
     transition: transform .6s ease-out;
 
@@ -220,6 +216,7 @@ h5 {
         /* background-image: linear-gradient(to bottom, #4bc5ffb0, #011d46); */
         /* background-image: linear-gradient(to bottom, #A38383b0, #5C3828); */
         /* background-image: linear-gradient(to bottom, #4bc5ffb0, #0d2c5a); */
+        clip-path: polygon(0px 0px, 14.7rem 0px, 16.5rem 10.4rem, 13.7rem 100%, 0px 100%);
     }
 }
 
@@ -359,14 +356,11 @@ h5 {
 
     position: relative;
     min-height: 100vh;
-    padding: 37rem 11rem 6rem $pageside-pad;
+    padding: 22.6rem 11rem 6rem $pageside-pad;
 
     &.page--home {
         padding-top: 15.6rem;
     }
-    // &.page--skills {
-    //     background-image: linear-gradient(180deg, rgba(7,129,148,.13), rgba(3,41,49,.41));
-    // }
 }
 
 .page--home {
@@ -374,16 +368,20 @@ h5 {
         @include flex-line(row);
     }
 
-    .home__mynameis span {
-        font-family: 'Raleway', sans-serif;
-        font-size: 3.4rem;
-        font-weight: 600;
-        text-transform: lowercase;
-        color: $color-accent-l;
-        text-shadow: 14px 4px 8px #000;
+    .home__mynameis h3 {
+        margin-left: 6px;
         position: relative;
         top: -9px;
-        margin-left: 6px;
+        font-weight: 900;
+    }
+
+    .home__myname {
+        margin-bottom: 11px;
+
+        font-family: 'Indie Flower', sans-serif;
+        font-size: 7.7rem;
+        color: #fcfcfc;
+        text-shadow: 2px 2px 15px #000;
     }
 
     .textcopy strong {
@@ -399,7 +397,30 @@ h5 {
     }
 }
 
-.section {
+.page--listprojects {
+    .card--project {
+        @include flex-line(row);
+
+        position: relative;
+        width: 100%;
+    }
+
+    .screencap {
+        width: 255px;
+        height: 162px;
+        object-fit: cover;
+        margin: 3px 3px 3px 2vw;
+        border: solid 1px #fff;
+        box-shadow: 0px 6px 11px #000;
+
+        &[alt="SuitApp screencap"],
+        &[alt="Middleware Demo screencap"] {
+            object-position: left top;
+        }
+    }
+}
+
+.page--skills .section {
     @include flex-line(row);
     flex-wrap: wrap;
 
