--- a/src/App.scss
+++ b/src/App.scss
@@ -329,11 +329,19 @@ h5 {
 .navlist {
     @include flex-line(column);
 
-    padding: 11rem $pageleft-pad 8rem ($pageleft-pad - .2vw);
+    padding: 15rem $pageleft-pad 8rem ($pageleft-pad - .2vw);
     width: 100%;
 
     li {
         margin-bottom: 11px;
+
+        &:last-child::before {
+            content: "⤙⤚";
+            position: relative;
+            top: -.6rem;
+            color: #fcfcfc;
+            font-size: 2rem;
+        }
 
         .link-navlist {
             &:link, &:visited {
@@ -346,6 +354,15 @@ h5 {
 
                 color: #fff;
                 text-shadow: 0px 2px 2px #000;
+
+                .faicon--iconbar {
+                    position: relative;
+                    left: 2px;
+                    opacity: 0;
+                    color: $color-primary;
+
+                    transition: opacity .5s ease-out;
+                }
 
                 div {
                     position: relative;
@@ -371,6 +388,10 @@ h5 {
                 div::after {
                     opacity: 1;
                 }
+
+                .faicon--iconbar {
+                    opacity: 1;
+                }
             }
             &.active {
                 color: $color-primary;
@@ -383,6 +404,10 @@ h5 {
                     opacity: 1;
                 }
             }
+        }
+
+        &:last-child .link-navlist div::after {
+            display: none;
         }
     }
 }
@@ -448,6 +473,10 @@ h5 {
         position: relative;
         width: 100%;
         margin-bottom: 10rem;
+
+        .project-description {
+            color: #ccc;
+        }
 
         .project-role {
             // position: absolute;
@@ -631,5 +660,68 @@ h5 {
 
     &:last-child {
         margin-bottom: $default-pad;
+    }
+}
+
+.page--contactme {
+    @include flex-line(column);
+
+    .form-container {
+        position: relative;
+        width: 100%;
+
+        .submitted-msg {
+            @include flex-center(center, center);
+
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: 10;
+            top: 7rem;
+            left: 3rem;
+
+            font-size: 4rem;
+            font-family: 'Indie Flower', cursive;
+            color: $color-primary;
+        }
+    }
+
+    .form-contactme {
+        @include flex-line(column);
+
+        width: 100%;
+        transition: opacity .4s ease-out;
+
+        label {
+            margin-left: .7rem;
+            margin-bottom: 1.8rem;
+            color: $color-primary;
+            font-size: 1.4rem;
+            font-weight: 900;
+            text-transform: lowercase;
+        }
+
+        input[type=text], input[type=email] {
+            all: unset;
+            border-bottom: solid 2px #777;
+            padding: .1rem 2.2rem .2rem 2.2rem;
+            font-size: 1.9rem;
+        }
+
+        input[name=nameTxt], input[name=emailTxt] {
+            width: 29rem;
+        }
+
+        input[name=msgTxt] {
+            width: 90%;
+            margin-top: 4rem;
+        }
+    }
+}
+
+
+@media (min-width: 992px) {
+    .page {
+        padding-left: 10rem;
     }
 }
